# HachiTune

./: .gitignore  CMakeLists.txt  build.bat
.github/workflows/: build.yml
Source/Audio/: FCPEPitchDetector.cpp  RMVPEPitchDetector.cpp  RealtimePitchProcessor.cpp  SOMEDetector.cpp  Vocoder.cpp
Source/Audio/Analysis/: AudioAnalyzer.cpp
Source/Audio/IO/: MidiExporter.h
Source/Plugin/: ARADocumentController.cpp  ARADocumentController.h  NonAraCaptureController.cpp  NonAraCaptureController.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: MainComponent.cpp  MainComponent.h  PianoRollComponent.cpp  PianoRollComponent.h
